# MetalOS

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QEMU_INSTRUCTIONS.md  README.md  conan_profile  conanfile.py
.github/workflows/: qemu-test.yml  release.yml  unit-tests.yml
_codeql_build_dir/: Makefile
_codeql_build_dir/bootloader/: Makefile
_codeql_build_dir/kernel/: Makefile
_codeql_build_dir/tests/: Makefile
_codeql_build_dir/tests/unit/: Makefile
_codeql_build_dir/userspace/: Makefile
agents/BuildAgent/: README.md  main.py
agents/DepUpdateAgent/: README.md  main.py
agents/DeployAgent/: README.md  main.py
agents/DocGenAgent/: README.md  main.py
agents/ExampleAgent/: README.md  main.py
agents/ExampleAgent/tests/: test_main.py
agents/LintAgent/: README.md  main.py
agents/RoadmapAgent/: README.md  main.py
agents/TestAgent/: README.md  main.py
bootloader/: CMakeLists.txt  Makefile  uefi.lds
bootloader/include/: bootloader.h  efi.h
bootloader/src/: main.c
cmake-build/: Makefile
cmake-build/Testing/Temporary/: CTestCostData.txt
cmake-build/bootloader/: Makefile
cmake-build/kernel/: Makefile
cmake-build/tests/: Makefile
docs/: ARCHITECTURE.md  BUILD.md  BUILD_SYSTEMS.md  COMPONENTS.md  CONAN.md  DEVELOPMENT.md  DOCKER.md  GPU_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KERNEL_REFERENCE.md  MINIMALISM.md  QEMU_TESTING.md  ROADMAP.md  SMP_MULTICORE.md  STATUS.md  TESTING.md
kernel/: CMakeLists.txt  Makefile  linker.ld
kernel/include/kernel/: apic.h  console.h  gdt.h  interrupts.h  kernel.h  memory.h  pci.h  smp.h  spinlock.h  timer.h
kernel/src/: ap_trampoline.asm  apic.c  apic.cpp  gdt.c  gdt.cpp  gdt_flush.asm  interrupts.c  interrupts.cpp  interrupts_asm.asm  main.c  main.cpp  memory.c  memory.cpp  pci.c  pci.cpp  smp.c  smp.cpp  spinlock.c  spinlock.cpp  timer.c  timer.cpp
kernel/src/core/: console.c
scripts/: create_image.sh  docker-build.sh  docker-run.sh  setup-deps.sh  test-conan-build.sh
tests/: CMakeLists.txt  Makefile
tests/include/: test_framework.h
tests/unit/: CMakeLists.txt  test_bootloader.c  test_console.c
userspace/: CMakeLists.txt
userspace/apps/: hello_world.cpp  hello_world.pro
